--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- --------Navbar Start--------- -->
 
-      <nav class="navbar navbar-expand-lg navbar-light cool-bg fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light cool-bg ">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="images/icon/Logo.png" alt="">
